1.悬浮窗调整 2.权限库优化

--- a/library_base/src/main/res/values/styles.xml
+++ b/library_base/src/main/res/values/styles.xml
@@ -4,7 +4,7 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@android:color/white</item>
         <item name="colorPrimaryDark">@android:color/white</item>
-        <item name="colorAccent">@android:color/white</item>
+        <item name="colorAccent">#55aff4</item>
 
 
         <!-- 必须添加的属性 -->
