--- a/library_base/src/main/res/values-night/colors.xml
+++ b/library_base/src/main/res/values-night/colors.xml
@@ -7,5 +7,5 @@
     <color name="base_tv_title_color">#D3D3D3</color>
     <color name="base_item_bottom_view">#000000</color>
     <color name="base_activity_bg">#D3D3D3</color>
-
+<color name="base_cancel">#666666</color>
 </resources>
