--- a/library_base/src/main/res/values/colors.xml
+++ b/library_base/src/main/res/values/colors.xml
@@ -18,5 +18,5 @@
     <color name="base_item_tv_time_color">#999999</color>
     <color name="base_item_bottom_view">#EFF2F5</color>
     <color name="base_activity_bg">#f7f7f7</color>
-
+    <color name="base_cancel">#999999</color>
 </resources>
