--- a/module_home/src/main/res/values/colors.xml
+++ b/module_home/src/main/res/values/colors.xml
@@ -72,4 +72,5 @@
      <color name="home_tv_location_text_color">#ffffff</color>
      <color name="home_tv_weather_wind_text_color">#ffffff</color>
      <color name="home_air_quality_level_text_color">#333333</color>
+     <color name="home_search_history_city_title_color">#999999</color>
 </resources>
