--- a/module_realtime/src/main/res/layouts/activitys/layout/realtime_main_activity.xml
+++ b/module_realtime/src/main/res/layouts/activitys/layout/realtime_main_activity.xml
@@ -24,7 +24,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+ >
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/layout_tab_segment"
@@ -32,7 +33,8 @@
             android:layout_height="@dimen/realtime_main_tab_height"
             android:gravity="center_vertical"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            >
 
             <ImageView
                 android:id="@+id/iv_realtime_home_back"
