--- a/module_realtime/src/main/res/layouts/fragments/layout/realtime_main_fragment.xml
+++ b/module_realtime/src/main/res/layouts/fragments/layout/realtime_main_fragment.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/base_activity_bg">
+    android:background="@color/realtime_root_bg">
 
 
     <LinearLayout
