--- a/module_realtime/src/main/res/values-night/colors.xml
+++ b/module_realtime/src/main/res/values-night/colors.xml
@@ -18,11 +18,12 @@
 
     <color name="realtime_tv_car_name_color">#D3D3D3</color>
     <color name="realtime_tv_car_desc_color">#666666</color>
-        <color name="realtime_tv_rank_car_hot_score_text_color">#D3D3D3</color>
-        <color name="realtime_tv_rank_car_hot_score_title_text_color">#666666</color>
+    <color name="realtime_tv_rank_car_hot_score_text_color">#D3D3D3</color>
+    <color name="realtime_tv_rank_car_hot_score_title_text_color">#666666</color>
 
-            <color name="realtime_tv_game_name_color">#D3D3D3</color>
-            <color name="realtime_tv_game_desc_color">#666666</color>
-                <color name="realtime_tv_rank_game_hot_score_text_color">#D3D3D3</color>
-                <color name="realtime_tv_rank_game_hot_score_title_text_color">#666666</color>
+    <color name="realtime_tv_game_name_color">#D3D3D3</color>
+    <color name="realtime_tv_game_desc_color">#666666</color>
+    <color name="realtime_tv_rank_game_hot_score_text_color">#D3D3D3</color>
+    <color name="realtime_root_bg">#000000</color>
+    <color name="realtime_tv_rank_rule_text_color">#666666</color>
 </resources>
