--- a/library_share/src/main/res/layout/share_dialog.xml
+++ b/library_share/src/main/res/layout/share_dialog.xml
@@ -125,6 +125,7 @@
                android:text="微信"/>
 
            <TextView
+               android:id="@+id/tv_time_line"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
