修复首页和体系页面崩溃问题 适配部分深色模式

--- a/module_eye_discover/src/main/res/layouts/activitys/layout/eye_discover_activity.xml
+++ b/module_eye_discover/src/main/res/layouts/activitys/layout/eye_discover_activity.xml
@@ -27,9 +27,10 @@
         android:id="@+id/eye_discover_search_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/Theme.Material3.Light.NoActionBar"
+        android:theme="@style/Theme.Material3.DayNight.NoActionBar"
         app:layout_scrollFlags="enterAlways"
         android:hint="@string/eye_discover_search_hint"
+        android:textColorHint="@color/eye_discover_search_bar_text_hint_color"
         android:layout_marginHorizontal="8dp"
         android:layout_marginVertical="16dp"
         app:defaultMarginsEnabled="false"/>
