--- a/module_eye_discover/src/main/res/layouts/adapters/layout/eye_discover_category_item.xml
+++ b/module_eye_discover/src/main/res/layouts/adapters/layout/eye_discover_category_item.xml
@@ -20,7 +20,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:textColor="@android:color/black"
+                android:textColor="@color/eye_discover_item_category_title_text_color"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
