--- a/module_eye_discover/src/main/res/layouts/adapters/layout/eye_discover_video_card_item.xml
+++ b/module_eye_discover/src/main/res/layouts/adapters/layout/eye_discover_video_card_item.xml
@@ -64,7 +64,7 @@
             android:textSize="13sp"
             android:textStyle="bold"
             android:text="@{viewModel.title}"
-            android:textColor="@android:color/black"
+            android:textColor="@color/eye_dicover_video_item_title_text_color"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/iv_video_cover"
             app:layout_constraintTop_toTopOf="@+id/iv_video_cover"
