--- a/module_eye_discover/src/main/res/values-night/colors.xml
+++ b/module_eye_discover/src/main/res/values-night/colors.xml
@@ -8,4 +8,11 @@
       <color name="eye_discover_special_topic_tv_publish_time_text_color">#D3D3D3</color>
       <color name="eye_discover_special_topic_tv_des_text_color">#666666</color>
       <color name="eye_discover_recommend_search_video_title_text_color">#D3D3D3</color>
+      <color name="eye_discover_search_bar_text_hint_color">#D3D3D3</color>
+      <color name="eye_discover_item_category_title_text_color">#D3D3D3</color>
+            <color name="eye_discover_item_subject_title_text_color">#D3D3D3</color>
+      <color name="eye_discover_brief_item_title_text_color">#D3D3D3</color>
+      <color name="eye_dicover_brief_item_follow_btn_text_color">#D3D3D3</color>
+      <color name="eye_dicover_video_item_title_text_color">#D3D3D3</color>
+      <color name="eye_discover_item_title_text_color">#D3D3D3</color>
 </resources>
