--- a/module_navigate/src/main/res/layouts/activitys/layout/navigate_hierachy_tab_activity.xml
+++ b/module_navigate/src/main/res/layouts/activitys/layout/navigate_hierachy_tab_activity.xml
@@ -1,29 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+
+<layout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="com.knight.kotlin.module_navigate.activity.HierachyTabActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <data>
+        <variable
+            name="title"
+            type="java.lang.String" />
 
-    <include
-        android:id="@+id/include_tabarticle_toolbar"
-        layout="@layout/base_include_toolbar"/>
 
-    <net.lucode.hackware.magicindicator.MagicIndicator
-        android:id="@+id/hierachy_indicator"
+    </data>
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/navigate_hierachy_indicator_height"
-        android:background="@color/navigate_hierachy_indicator_color"
-        android:theme="@style/base_AppTheme.AppBarOverlay"
-        app:layout_scrollFlags="scroll|enterAlways"
-        app:popupTheme="@style/base_AppTheme.PopupOverlay"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        tools:context="com.knight.kotlin.module_navigate.activity.HierachyTabActivity">
 
-    <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/hierachy_view_pager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        <include
+            android:id="@+id/include_tabarticle_toolbar"
+            layout="@layout/base_include_toolbar"
+            app:title="@{title}"/>
 
-</LinearLayout>
+        <net.lucode.hackware.magicindicator.MagicIndicator
+            android:id="@+id/hierachy_indicator"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/navigate_hierachy_indicator_height"
+            android:background="@color/navigate_hierachy_indicator_color"
+            android:theme="@style/base_AppTheme.AppBarOverlay"
+            app:layout_scrollFlags="scroll|enterAlways"
+            app:popupTheme="@style/base_AppTheme.PopupOverlay"/>
+
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/hierachy_view_pager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+    </LinearLayout>
+
+
+</layout>
+
+
