--- a/module_eye_daily/src/main/res/layouts/activitys/layout/eye_daily_list_activity.xml
+++ b/module_eye_daily/src/main/res/layouts/activitys/layout/eye_daily_list_activity.xml
@@ -14,7 +14,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/eye_daily_bg_color">
 
         <include
             android:id="@+id/include_eye_daily_toolbar"
