--- a/module_eye_daily/src/main/res/values/colors.xml
+++ b/module_eye_daily/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
     <color name="eye_daily_item_desc_text_color">#CCFFFFFF</color>
     <color name="eye_daily_banner_message_bg">#66FFFFFF</color>
     <color name="eye_daily_head_banner_text_title">#333333</color>
+    <color name="eye_daily_bg_color">#f7f7f7</color>
 </resources>
