--- a/module_eye_daily/src/main/res/layouts/adapters/layout/eye_daily_banner_item.xml
+++ b/module_eye_daily/src/main/res/layouts/adapters/layout/eye_daily_banner_item.xml
@@ -21,9 +21,9 @@
 
         <ImageView
             android:id="@+id/eye_daily_iv_banner"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="0dp"
-            android:scaleType="fitXY"
+            android:scaleType="centerCrop"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
