引入开眼评论功能

--- a/module_eye_video_detail/src/main/res/values/colors.xml
+++ b/module_eye_video_detail/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="eye_video_follow_text_color">#FF9E9E9E</color>
     <color name="eye_video_detail_relate_tv_time_background_tint">#8A000000</color>
     <color name="eye_video_detail_bg">#E61e272e</color>
+    <color name="eye_video_tv_comment_time_location_text_color">#999999</color>
+    <color name="eye_video_tv_send_comment_hint_color">#ccffffff</color>
 </resources>
