--- a/module_eye_video_detail/src/main/res/layouts/fragments/layout/eye_video_comment_fragment.xml
+++ b/module_eye_video_detail/src/main/res/layouts/fragments/layout/eye_video_comment_fragment.xml
@@ -3,21 +3,83 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+    android:layout_height="match_parent"
+    android:id="@+id/cl_video_comment">
 
 
     <TextView
+        android:id="@+id/tv_video_new_comment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="@dimen/eye_video_new_comment_title_text_size"
+        android:text="@string/eye_video_new_comment_title"
+        android:layout_marginLeft="10dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:textColor="@android:color/white"/>
+
+
+
+
+
+    <com.yanzhenjie.recyclerview.SwipeRecyclerView
+        android:id="@+id/rv_comment_video"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:text="这是评论页面"/>
+        app:layout_constraintTop_toBottomOf="@id/tv_video_new_comment"
+        app:layout_constraintBottom_toTopOf="@id/rl_video_comment"
+        android:layout_marginTop="@dimen/eye_video_rv_comment_video_margin_top"
+        />
+
+
+    <RelativeLayout
+        android:id="@+id/rl_video_comment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent">
 
 
 
+        <ImageView
+            android:id="@+id/iv_eye_video_comment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="@dimen/eye_video_iv_comment_margin_left"
+            android:background="@drawable/eye_video_ic_comment"/>
+
+        <EditText
+            android:id="@+id/et_video_comment"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/eye_video_et_video_comment_height"
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@id/iv_eye_video_comment"
+            android:background="@drawable/eye_video_comment_bg"
+            android:layout_marginLeft="@dimen/eye_video_et_video_comment_margin_left"
+            android:layout_marginRight="@dimen/eye_video_et_video_comment_margin_right"
+            android:gravity="center_vertical"
+            android:hint="@string/eye_video_click_send_comment"
+            android:paddingHorizontal="12dp"
+            android:textColorHint="@color/eye_video_tv_send_comment_hint_color"
+            android:textSize="@dimen/eye_video_et_video_comment_text_size"
+            android:layout_toLeftOf="@id/tv_eye_video_comment"
+            />
 
 
+        <TextView
+            android:id="@+id/tv_eye_video_comment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:background="@drawable/eye_video_icon_comment"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="@dimen/eye_video_tv_comment_margin_right"/>
+    </RelativeLayout>
+
+
+<!--    android:focusable="false"-->
+<!--    android:focusableInTouchMode="false"-->
 </androidx.constraintlayout.widget.ConstraintLayout>
+
