引入开眼推荐模块 后续计划先完善开眼功能 加入万年历-星座等

--- a/module_eye_video_detail/src/main/res/layouts/activitys/layout/eye_video_detail_activity.xml
+++ b/module_eye_video_detail/src/main/res/layouts/activitys/layout/eye_video_detail_activity.xml
@@ -62,7 +62,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:tabGravity="start"
-                    app:tabMode="auto"
+                    app:tabMode="scrollable"
                     app:tabSelectedTextColor="@android:color/white"
                     app:tabTextColor="@android:color/white"
                     android:background="@android:color/transparent"/>
