引入星座模块

--- a/nowinandroid/core/library_widget/src/main/res/values/attrs.xml
+++ b/nowinandroid/core/library_widget/src/main/res/values/attrs.xml
@@ -1246,4 +1246,13 @@
         <attr name="indeterminate" format="boolean" />
         <attr name="indeterminate_angle" format="float|reference"/>
     </declare-styleable>
+
+
+
+    <declare-styleable name="SimpleProgressBar">
+        <attr name="simpleprogresscolor" format="color"/>
+        <attr name="simplebackgroundcolor" format="color"/>
+        <attr name="simpleprogress" format="integer"/>
+        <attr name="simplestroke" format="float"/>
+    </declare-styleable>
 </resources>
