--- a/nowinandroid/feature/module_home/src/main/res/values/dimens.xml
+++ b/nowinandroid/feature/module_home/src/main/res/values/dimens.xml
@@ -292,4 +292,5 @@
      <dimen name="home_tv_new_title_margin_bottom">10dp</dimen>
      <dimen name="home_tv_new_title_margin_top">5dp</dimen>
      <dimen name="home_cb_weather_margin_top">10dp</dimen>
+     <dimen name="home_tv_constellate_margin_left">5dp</dimen>
 </resources>
