尽大化完成so动态下发方案

--- a/nowinandroid/core/library_widget/src/main/res/values/attrs.xml
+++ b/nowinandroid/core/library_widget/src/main/res/values/attrs.xml
@@ -1254,5 +1254,8 @@
         <attr name="simplebackgroundcolor" format="color"/>
         <attr name="simpleprogress" format="integer"/>
         <attr name="simplestroke" format="float"/>
+        <attr name="simpleShowText" format="boolean"/>  <!-- 新增 -->
+        <!-- 新增左边是否直角 -->
+        <attr name="simpleLeftCornerStraight" format="boolean"/>
     </declare-styleable>
 </resources>
