--- a/nowinandroid/feature/module_welcome/src/main/res/values/dimens.xml
+++ b/nowinandroid/feature/module_welcome/src/main/res/values/dimens.xml
@@ -22,4 +22,8 @@
     <dimen name="welcome_privacy_disagree_margin_right">16dp</dimen>
     <dimen name="welcome_privacy_disagree_padding_top">15dp</dimen>
     <dimen name="welcome_privacy_disagree_padding_bottom">15dp</dimen>
+    <dimen name="welcome_privacy_load_so_pb_height">70dp</dimen>
+    <dimen name="welcome_privacy_load_so_pb_margin_left">20dp</dimen>
+    <dimen name="welcome_privacy_load_so_pb_margin_right">20dp</dimen>
+    <dimen name="welcome_privacy_load_so_pb_margin_bottom">80dp</dimen>
 </resources>
