--- a/nowinandroid/feature/module_constellate/src/main/res/values/colors.xml
+++ b/nowinandroid/feature/module_constellate/src/main/res/values/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
   <resources>
 
-   <color name="constellate_head_date_color">#B4AEF7</color>
+   <color name="constellate_head_date_color">#CDCEFB</color>
   </resources>
